@@ -1,4 +1,5 @@
 Version 0.12.0 (legolas558)
+* eat whitespaces and a newline after nowiki, macro, comments and transclusion syntax
 * disallow unsupported file modes on non-Gecko browsers
 * dropped 'Special::Aliases' and 'Special::Edit CSS'
 * fixed a bug happening in case of encrypted page duplication
